--- a/themes/swb/partials/about.htm
+++ b/themes/swb/partials/about.htm
@@ -25,23 +25,23 @@ pageNumber = "{{ :page }}"
 <div class="about__draw">
     <div class="ad__wrap">
         <div class="adw__block abw__draw">
-            <p>розыгрыш</p>
-            <span>призов</span>
+            <p>{{ about.title_1 }}</p>
+            <span>{{ about.title_2 }}</span>
         </div>
         <div class="adw__count">
             <div class="adw__block adw__counts">
                 <p>{{ about.left_digit }}</p>
-                <span>раз</span>
+                <span>{{ about.label_left }}</span>
             </div>
-            <span class="adw__count__middle">в</span>
+            <span class="adw__count__middle">{{ about.between }}</span>
             <div class="adw__block adw__month">
                 <p>{{ about.right_digit }}</p>
-                <span>{{месяца}}</span>
+                <span>{{ about.label_right }}</span>
             </div>
         </div>
         <div class="adw__block adw__live">
-            <p>в прямом эфире</p>
-            <span>с помощью сервиса <a href="{{ about.url_random }}">рандомайзер</a></span>
+            <p>{{ about.location_1 }}</p>
+            <span>{{ about.location_2|replace({'<p>':'','</p>':''})|raw }}</span>
         </div>
     </div>
     <div class="ad__draw__right">
